--- a/src/pages/login/style/login.css
+++ b/src/pages/login/style/login.css
@@ -1,4 +1,8 @@
 .login {
+    display: flex;
+    /* justify-content: center; */
+    /* align-items: center; */
+    flex-direction: column;
     width: 100%;
     height: 100%;
     background-color: red;
@@ -9,9 +13,25 @@
     width: 100%;
     /* background-color: antiquewhite; */
 }
+.login-content {
+    flex: 1;
+    /* background-color: aqua; */
+}
 .headerTitle {
     text-align: center;
     line-height: 80px;
     font-weight: 700;
     font-size: 30px;
+}
+.login-from {
+    width: 500px;
+    height: 400px;
+    background-color: rgba(91, 87, 87, 0.3);
+    position: absolute;
+    top: 0;
+    bottom:0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 15px;
 }
